<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="68dp"
            android:background="@drawable/shape_border_radius_12"
            android:backgroundTint="@color/gray_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_withdraw_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="@dimen/spacing4"
                android:text="@string/withdraw_dialog_title"
                android:textAppearance="@style/TextAppearance.System4_Bold"
                android:textColor="@color/gray_800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_withdraw_dialog_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing16"
                android:gravity="center"
                android:paddingVertical="3dp"
                android:text="@string/withdraw_dialog_description"
                android:textAppearance="@style/TextAppearance.System5"
                android:textColor="@color/gray_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_dialog_title" />

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/Style.Dialog.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing12"
                android:text="@string/withdraw_cancel"
                app:layout_constraintEnd_toStartOf="@+id/view_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_dialog_description" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:background="@color/gray_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_cancel" />

            <TextView
                android:id="@+id/tv_withdraw"
                style="@style/Style.Dialog.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_dialog"
                android:textColor="@color/orange_600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_divider"
                app:layout_constraintTop_toTopOf="@+id/tv_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
