<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="org.keepgoeat.R" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/view_withdraw_toolbar"
            layout="@layout/view_toolbar"
            app:title="@{context.getString(R.string.withdraw)}" />

        <TextView
            android:id="@+id/tv_withdraw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            android:layout_marginTop="32dp"
            android:text="@string/withdraw_title"
            android:textAppearance="@style/TextAppearance.System2_Bold"
            android:textColor="@color/gray_800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_withdraw_toolbar" />

        <TextView
            android:id="@+id/tv_withdraw_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            android:layout_marginTop="@dimen/spacing8"
            android:text="@string/withdraw_description"
            android:textAppearance="@style/TextAppearance.System5"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_title" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_withdraw"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginBottom="42dp"
            android:background="@color/orange_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw"
                android:textAppearance="@style/TextAppearance.System4_Bold"
                android:textColor="@color/gray_50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

