<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_bottom_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_border_radius_12"
            android:backgroundTint="#FFF3EF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_home_bottom_more_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/eating_type_more"
                android:textAppearance="@style/TextAppearance.System3_Bold"
                android:textColor="@color/orange_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_bottom_more_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/bottom_home_more_txt"
                android:textAppearance="@style/TextAppearance.System5"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_bottom_more_txt" />

            <ImageView
                android:id="@+id/iv_home_bottom_snail_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="11dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_snail_orange_spoon_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_bottom_less"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginTop="@dimen/spacing16"
            android:layout_marginBottom="48dp"
            android:background="@drawable/shape_border_radius_12"
            android:backgroundTint="#F1FCF7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_home_bottom_more">

            <TextView
                android:id="@+id/tv_home_bottom_less_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/eating_type_less"
                android:textAppearance="@style/TextAppearance.System3_Bold"
                android:textColor="#3AC289"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_bottom_less_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/bottom_home_less_txt"
                android:textAppearance="@style/TextAppearance.System5"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_bottom_less_txt" />

            <ImageView
                android:id="@+id/iv_home_bottom_snail_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="@dimen/spacing8"
                android:src="@drawable/ic_snail_green_ribbon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
